# firewatch

./: .air.toml  .dockerignore  .env.example  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  architecture.md  firewatch.db  firewatch.yaml  go.mod  go.sum  main.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  test_settings.py  tree.md
.github/: dependabot.yml
.github/workflows/: ci.yml
cmd/api/: app.go  endpoints.go  main.go  wire.go  wire_gen.go
cmd/firewatch/: events.go  export.go  main.go  stats.go
cmd/test/: main.go
cmd/worker/: main.go
core/types/: types.py
deployments/docker/: .env.example  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
docs/: ARCHITECTURE.md  CHANGELOG-2024-02-10.md  CHANGELOG-2024-02-10b.md  CHANGELOG-2026-02-14.md  HANDLER.md  ROADMAP.md  TREE.md
docs/swagger/: docs.go  swagger.json  swagger.yaml
internal/alerts/: alerter.go  alerts_test.go  discord.go  manager.go  slack.go  webhook.go
internal/api/: api.go  api_test.go  attackers.go  auth.go  auth_test.go  campaigns.go  events.go  health.go  iocs.go  stats.go  tokens.go
internal/audit/: provider.go
internal/config/: config.go  config_test.go  defaults.go  validation.go
internal/deception/: breadcrumbs.go  breadcrumbs_test.go  responses.go  responses_test.go  tokens.go  tokens_test.go
internal/demo/: handler.go  routes.go
internal/detection/: behavior.go  behavior_test.go  campaign.go  correlator.go  correlator_test.go  detector.go  detector_test.go  loader.go  loader_test.go  patterns.go  signatures.go  (+1 more)
migrations/: 000001_create_users_table.down.sql  000001_create_users_table.up.sql  000002_create_audit_entries.down.sql  000002_create_audit_entries.up.sql  000003_create_notifications.down.sql  000003_create_notifications.up.sql  000004_create_sessions.down.sql  000004_create_sessions.up.sql  000005_create_password_reset_tokens.down.sql  000005_create_password_reset_tokens.up.sql  000006_create_email_verification_tokens.down.sql  000006_create_email_verification_tokens.up.sql  000007_create_oauth_accounts.down.sql  000007_create_oauth_accounts.up.sql  000008_create_email_templates.down.sql  000008_create_email_templates.up.sql  000009_add_email_templates_is_system.down.sql  000009_add_email_templates_is_system.up.sql  000009_create_tenants.up.sql  000010_create_tenants.down.sql  000011_add_tenant_owner_email.down.sql  000011_add_tenant_owner_email.up.sql  000012_create_jobs.up.sql  000013_create_flags_table.down.sql  000013_create_flags_table.up.sql  000014_create_permissions_schema.down.sql  000014_create_permissions_schema.up.sql
scripts/: new-project.sh
(+493 files in other folders)
