[project]
name = "py-core"
version = "0.1.0"
description = ""
authors = [
    {name = "'0xsj'",email = "sjtommylee@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.10"
mypy = "^1.17.1"
python-dotenv = "^1.1.1"

