[project]
name = "py-core"
version = "0.1.0"
description = ""
authors = [
    {name = "'0xsj'",email = "sjtommylee@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "redis[hiredis] (>=6.4.0,<7.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "structlog (>=25.4.0,<26.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery (>=5.4.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
factory-boy = "^3.3.3"
faker = "^37.11.0"
ruff = "^0.14.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
ipython = "^9.6.0"
watchfiles = "^1.1.0"

